# automoduse

./: Cargo.toml  README.md
examples/: tests.rs
src/: lib.rs
