[package]
name = "automoduse"
version = "1.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Yuuki Rika <yvvki@kekkon.nexus>"]
categories = ["development-tools::build-utils", "filesystem", "no-std", "no-std::no-alloc"]
description = "Pull in every source file in a directory as a module and optionally re-export their contents."
documentation = "https://docs.rs/automoduse"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yvvki/automoduse"
rust-version = "1.68"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = "2.0.46"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
